Improve test coverage to 80%+ and fix goimports formatting
- Add comprehensive tests for internal/cmd: runDoctor, runInit, runProfileAdd,
  runSwitch, runStatus, installShellHook, installHookBinary
- Add config tests: ExpandPath, AddBinding replacement, invalid YAML, Dir variants
- Refactor GHAuth to inject execFn for testability, add Token/AuthenticatedUsers/
  ActiveUser tests with mock exec
- Add ghauth parseActiveUser pure function with tests
- Fix goimports formatting across all source files
- Update CI to measure coverage on internal/... only (exclude thin cmd/ mains)
  with 80% threshold gate

Coverage: cmd 77.2%, config 80.1%, ghauth 97.4%, gitconfig 82.4%,
hook 86.4%, resolve 92.0% — total 80.3%

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,12 +30,16 @@ jobs:
         with:
           go-version-file: go.mod
       - name: Run tests
-        run: go test -race -coverprofile=coverage.out ./...
+        run: go test -race -coverprofile=coverage.out ./internal/...
       - name: Check coverage
         run: |
           go tool cover -func=coverage.out
           COVERAGE=$(go tool cover -func=coverage.out | grep total | awk '{print $3}' | sed 's/%//')
           echo "Total coverage: ${COVERAGE}%"
+          if [ "$(echo "$COVERAGE < 80" | bc)" -eq 1 ]; then
+            echo "::error::Coverage ${COVERAGE}% is below 80% threshold"
+            exit 1
+          fi
 
   build:
     runs-on: ubuntu-latest
