Fix: use HOMEBREW_TAP_TOKEN for cross-repo formula push

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -40,6 +40,7 @@ brews:
   - repository:
       owner: dotbrains
       name: homebrew-tap
+      token: "{{ .Env.HOMEBREW_TAP_TOKEN }}"
     directory: Formula
     homepage: https://github.com/dotbrains/gh-identity
     description: "Multi-account GitHub identity management — automatic context-based account switching and per-directory identity binding."
