fix: add name, ids, and skip_upload to brews config

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -36,7 +36,10 @@ checksum:
   name_template: "checksums.txt"
 
 brews:
-  - repository:
+  - name: gh-identity
+    ids:
+      - gh-identity-archive
+    repository:
       owner: dotbrains
       name: homebrew-tap
       token: "{{ .Env.HOMEBREW_TAP_TOKEN }}"
@@ -44,6 +47,7 @@ brews:
     homepage: https://github.com/dotbrains/gh-identity
     description: "Multi-account GitHub identity management — automatic context-based account switching and per-directory identity binding."
     license: MIT
+    skip_upload: auto
     install: |
       bin.install "gh-identity"
       bin.install "gh-identity-hook"
